<resources>
    <string name="app_name">TuJefe</string>

    <!--Bottom Nav Bar Fragment-->
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!--RecyclerView Item elements-->
    <string name="name">Account</string>
    <string name="code">000&#8211;000</string>
    <string name="copy">Copy</string>
    <string name="edit">Edit</string>

    <!--Manual Add Fragment-->
    <string name="setup_key_field">Setup Key</string>
    <string name="manual_add_button">Add</string>
    <string name="title_manual_add">Add Manually</string>
    <string name="name_field">Account Name</string>

    <!--QRScan Fragment-->
    <string name="cameraButton_text">Scan Using Camera</string>
    <string name="screenshotButton_text">Scan a Photo from Gallery</string>
    <string name="title_qr_scan">Scan a QR Code</string>

    <!--Edit Fragment-->
    <string name="renameHint">New Account Name</string>
    <string name="saveEditButton">Save</string>
    <string name="deleteButton">Delete Account</string>
    <string name="title_edit">Edit Account</string>
</resources>