<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.fluffybros.tujefe.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_edit"
            app:destination="@id/navigation_edit" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.fluffybros.tujefe.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.fluffybros.tujefe.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_manual_add"
        android:label="@string/title_manual_add"
        android:name="com.fluffybros.tujefe.ui.add.ManualAddFragment"
        tools:layout="@layout/fragment_manual_add" />

    <fragment
        android:id="@+id/navigation_qr_scan"
        android:label="@string/title_qr_scan"
        android:name="com.fluffybros.tujefe.ui.add.QRScanFragment"
        tools:layout="@layout/fragment_qr_scan" />

    <fragment
        android:id="@+id/navigation_edit"
        android:label="@string/title_edit"
        android:name="com.fluffybros.tujefe.ui.edit.EditFragment"
        tools:layout="@layout/fragment_edit">
        <argument
            android:name="accountNumber"
            app:argType="integer" />
    </fragment>

</navigation>